--- a/about.html
+++ b/about.html
@@ -17,11 +17,11 @@
 
 </head>
 
-<body class="xl:flex xl:flex-col xl:items-center relative">
-    <img class="used-back absolute left-0 top-0" src="./public/Acceuil.jpg"
+<body class="xl:flex xl:flex-col  xl:items-center relative">
+    <img class="used-back absolute object-cover blur left-0 top-0" src="./public/Acceuil.jpg"
     alt="Image Description">
     <header class="z-50 flex max-sm:px-4 px-8 w-full flex-wrap text-sm md:fixed md:flex-nowrap md:justify-start">
-        <nav class="relative nav-header mt-2 w-full max-w-7xl border border-gray-200 bg-[#002B38] px-4 py-3 md:flex md:items-center md:justify-between rounded-[36px] md:px-6 lg:py-0 lg:px-8 xl:mx-auto" aria-label="Global ">
+        <nav class="relative nav-header mt-2 w-full max-w-7xl border border-gray-200 bg-[#002B38] px-4 py-3 md:flex md:items-center md:justify-between rounded-2xl md:px-6 lg:py-0 lg:px-8 xl:mx-auto" aria-label="Global ">
             <div class="flex items-center justify-between">
                 <a class="flex-none text-xl font-semibold text-white" href="# " aria-label="Brand ">TeriTech</a>
                 <div x-data="{ open: false } " class="lg:hidden">
@@ -84,7 +84,7 @@
 
 
     <!-- Blog Article -->
-    <div class="max-w-7xl overflow-hidden max-lg:px-8 pb-12 pt-6 lg:pt-10">
+    <div class="max-w-7xl overflow-hidden px-8 pb-12 pt-6 lg:pt-10">
         <div class="space-y-5 md:space-y-8">
             <div class="md:grid md:grid-cols-2">
 
@@ -127,7 +127,7 @@
 
 
 
-    <div class="max-w-7xl overflow-hidden max-lg:px-8 pb-12 pt-6 lg:pt-10">
+    <div class="max-w-7xl overflow-hidden px-8 pb-12 pt-6 lg:pt-10">
         <div class="items-center justify-center gap-4 text-start md:grid md:grid-cols-2 md:gap-8 xl:gap-20">
             <div data-aos="fade-down-right" data-aos-duration="2000" class="max-sm:flex max-sm:flex-col max-sm:items-center">
                 <h1 class="block text-3xl font-bold text-[#002B38] sm:text-4xl lg:text-5xl lg:leading-tight max-sm:text-center">Teritech n'est pas juste un cabinet de conseil</h1>
@@ -144,7 +144,7 @@
     </div>
     <!-- End Blog Article -->
 
-    <div class="max-w-7xl overflow-hidden max-lg:px-8 pb-12 pt-6 lg:pt-10 rounded-2xl" data-aos="fade-up" data-aos-duration="2000">
+    <div class="max-w-7xl overflow-hidden px-8 pb-12 pt-6 lg:pt-10 rounded-2xl" data-aos="fade-up" data-aos-duration="2000">
         <div class="relative max-lg:p-6 ">
             <!-- Grid -->
             <div class="relative z-10 lg:grid lg:grid-cols-12 lg:items-center lg:gap-16">
