--- a/test.html
+++ b/test.html
@@ -18,12 +18,12 @@
 </head>
 
 <body class="relative overflow-x-hidden">
-    <img class="used-back absolute left-0 top-0" src="./public/Acceuil.jpg"
+    <img class="used-back absolute object-cover blur left-0 top-0" src="./public/Acceuil.jpg"
     alt="Image Description">
 
     <!-- ========== HEADER ========== -->
     <header class="z-50 flex lg:px-16 w-full flex-wrap text-sm md:fixed md:flex-nowrap md:justify-start">
-        <nav class="relative nav-header mx-2 mt-2 w-full max-w-7xl border border-gray-200 bg-[#002B38] px-4 py-3 md:flex md:items-center md:justify-between rounded-[36px] md:px-6 lg:py-0 lg:px-8 xl:mx-auto" aria-label="Global ">
+        <nav class="relative nav-header mx-2 mt-2 w-full max-w-7xl border border-gray-200 bg-[#002B38] px-4 py-3 md:flex md:items-center md:justify-between rounded-2xl md:px-6 lg:py-0 lg:px-8 xl:mx-auto" aria-label="Global ">
             <div class="flex items-center justify-between">
                 <a class="flex-none text-xl font-semibold text-white" href="# " aria-label="Brand ">TeriTech</a>
                 <div x-data="{ open: false } " class="lg:hidden">
