--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 
     <!---------------------------------------------------------------------------->
     <header class="z-50 flex w-full flex-wrap text-sm md:fixed md:flex-nowrap md:justify-start">
-        <nav class="relative mx-2 mt-2 w-full max-w-7xl border border-gray-200 bg-[#002B38] px-4 py-3 md:flex md:items-center md:justify-between rounded-[36px] md:px-6 lg:py-0 lg:px-8 xl:mx-auto" aria-label="Global ">
+        <nav class="relative mx-2 mt-2 w-full max-w-7xl border border-gray-200 bg-[#002B38] px-4 py-3 md:flex md:items-center md:justify-between rounded-2xl md:px-6 lg:py-0 lg:px-8 xl:mx-auto" aria-label="Global ">
             <div class="flex items-center justify-between">
                 <a class="flex-none text-xl font-semibold text-white" href="# " aria-label="Brand ">TeriTech</a>
                 <div x-data="{ open: false } " class="lg:hidden">
@@ -125,18 +125,18 @@
                             <div class="aspect-w-16 aspect-h-11">
                                 <img class="w-full rounded-xl object-cover" src="https://images.unsplash.com/photo-1633114128174-2f8aa49759b0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="Image Description">
                             </div>
-                            <div class="my-6">
+                            <div class="mt-6">
                                 <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-300 dark:group-hover:text-white">
                                     Announcing a free plan for small teams
                                 </h3>
-                                <p class="mt-5 text-gray-600 dark:text-gray-400">
+                                <p class="mt-2 mb-4 text-gray-600 dark:text-gray-400">
                                     At Wake, our mission has always been focused on bringing openness.
                                 </p>
                             </div>
                             <div class="mt-auto flex items-center gap-x-3">
-                                <img class="size-8" src="./public/timetable-icon.svg" alt="Image Description">
+                                <img class="size-5" src="./public/timetable-icon.svg" alt="Image Description">
                                 <div>
-                                    <h5 class="text-sm text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
+                                    <h5 class="text-xs text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
                                 </div>
                             </div>
                         </a>
@@ -148,18 +148,18 @@
                             <div class="aspect-w-16 aspect-h-11">
                                 <img class="w-full rounded-xl object-cover" src="https://images.unsplash.com/photo-1562851529-c370841f6536?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3540&q=80" alt="Image Description">
                             </div>
-                            <div class="my-6">
+                            <div class="mt-6">
                                 <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-300 dark:group-hover:text-white">
                                     How Google Assistant now helps you record stories for kids
                                 </h3>
-                                <p class="mt-5 text-gray-600 dark:text-gray-400">
+                                <p class="mt-2 mb-4 text-gray-600 dark:text-gray-400">
                                     Google is constantly updating its consumer AI, Google Assistant, with new features.
                                 </p>
                             </div>
                             <div class="mt-auto flex items-center gap-x-3">
-                                <img class="size-8" src="./public/timetable-icon.svg" alt="Image Description">
+                                <img class="size-5" src="./public/timetable-icon.svg" alt="Image Description">
                                 <div>
-                                    <h5 class="text-sm text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
+                                    <h5 class="text-xs text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
                                 </div>
                             </div>
                         </a>
@@ -171,18 +171,18 @@
                             <div class="aspect-w-16 aspect-h-11">
                                 <img class="w-full rounded-xl object-cover" src="https://images.unsplash.com/photo-1521321205814-9d673c65c167?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3548&q=80" alt="Image Description">
                             </div>
-                            <div class="my-6">
+                            <div class="mt-6">
                                 <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-300 dark:group-hover:text-white">
                                     Front accounts - let's work together
                                 </h3>
-                                <p class="mt-5 text-gray-600 dark:text-gray-400">
+                                <p class="mt-2 mb-4 text-gray-600 dark:text-gray-400">
                                     Are you an accountant? Are you a company formation advisor?
                                 </p>
                             </div>
                             <div class="mt-auto flex items-center gap-x-3">
-                                <img class="size-8" src="./public/timetable-icon.svg" alt="Image Description">
+                                <img class="size-5" src="./public/timetable-icon.svg" alt="Image Description">
                                 <div>
-                                    <h5 class="text-sm text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
+                                    <h5 class="text-xs text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
                                 </div>
                             </div>
                         </a>
@@ -191,18 +191,18 @@
                             <div class="aspect-w-16 aspect-h-11">
                                 <img class="w-full rounded-xl object-cover" src="https://images.unsplash.com/photo-1633114128174-2f8aa49759b0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="Image Description">
                             </div>
-                            <div class="my-6">
+                            <div class="mt-6">
                                 <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-300 dark:group-hover:text-white">
                                     Announcing a free plan for small teams
                                 </h3>
-                                <p class="mt-5 text-gray-600 dark:text-gray-400">
+                                <p class="mt-2 mb-4 text-gray-600 dark:text-gray-400">
                                     At Wake, our mission has always been focused on bringing openness.
                                 </p>
                             </div>
                             <div class="mt-auto flex items-center gap-x-3">
-                                <img class="size-8" src="./public/timetable-icon.svg" alt="Image Description">
+                                <img class="size-5" src="./public/timetable-icon.svg" alt="Image Description">
                                 <div>
-                                    <h5 class="text-sm text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
+                                    <h5 class="text-xs text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
                                 </div>
                             </div>
                         </a>
@@ -214,18 +214,18 @@
                             <div class="aspect-w-16 aspect-h-11">
                                 <img class="w-full rounded-xl object-cover" src="https://images.unsplash.com/photo-1562851529-c370841f6536?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3540&q=80" alt="Image Description">
                             </div>
-                            <div class="my-6">
+                            <div class="mt-6">
                                 <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-300 dark:group-hover:text-white">
                                     How Google Assistant now helps you record stories for kids
                                 </h3>
-                                <p class="mt-5 text-gray-600 dark:text-gray-400">
+                                <p class="mt-2 mb-4 text-gray-600 dark:text-gray-400">
                                     Google is constantly updating its consumer AI, Google Assistant, with new features.
                                 </p>
                             </div>
                             <div class="mt-auto flex items-center gap-x-3">
-                                <img class="size-8" src="./public/timetable-icon.svg" alt="Image Description">
+                                <img class="size-5" src="./public/timetable-icon.svg" alt="Image Description">
                                 <div>
-                                    <h5 class="text-sm text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
+                                    <h5 class="text-xs text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
                                 </div>
                             </div>
                         </a>
@@ -237,18 +237,18 @@
                             <div class="aspect-w-16 aspect-h-11">
                                 <img class="w-full rounded-xl object-cover" src="https://images.unsplash.com/photo-1521321205814-9d673c65c167?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3548&q=80" alt="Image Description">
                             </div>
-                            <div class="my-6">
+                            <div class="mt-6">
                                 <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-300 dark:group-hover:text-white">
                                     Front accounts - let's work together
                                 </h3>
-                                <p class="mt-5 text-gray-600 dark:text-gray-400">
+                                <p class="mt-2 mb-4 text-gray-600 dark:text-gray-400">
                                     Are you an accountant? Are you a company formation advisor?
                                 </p>
                             </div>
                             <div class="mt-auto flex items-center gap-x-3">
-                                <img class="size-8" src="./public/timetable-icon.svg" alt="Image Description">
+                                <img class="size-5" src="./public/timetable-icon.svg" alt="Image Description">
                                 <div>
-                                    <h5 class="text-sm text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
+                                    <h5 class="text-xs text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
                                 </div>
                             </div>
                         </a>
