--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="z-50 flex w-full flex-wrap text-sm md:fixed md:flex-nowrap md:justify-start">
-        <nav class="relative mx-2 mt-2 w-full max-w-7xl border border-gray-200 bg-[#002B38] px-4 py-3 md:flex md:items-center md:justify-between rounded-[36px] md:px-6 lg:py-0 lg:px-8 xl:mx-auto" aria-label="Global ">
+        <nav class="relative mx-2 mt-2 w-full max-w-7xl border border-gray-200 bg-[#002B38] px-4 py-3 md:flex md:items-center md:justify-between rounded-2xl md:px-6 lg:py-0 lg:px-8 xl:mx-auto" aria-label="Global ">
             <div class="flex items-center justify-between">
                 <a class="flex-none text-xl font-semibold text-white" href="# " aria-label="Brand ">TeriTech</a>
                 <div x-data="{ open: false } " class="lg:hidden">
