--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <!-- ========== HEADER ========== -->
     <header class="z-50 flex w-full flex-wrap text-sm md:fixed md:flex-nowrap md:justify-start">
-        <nav class="relative mx-2 mt-2 w-full max-w-7xl border border-gray-200 bg-[#002B38] px-4 py-3 md:flex md:items-center md:justify-between rounded-[36px] md:px-6 lg:py-0 lg:px-8 xl:mx-auto" aria-label="Global ">
-            <img class="absolute md:hidden rounded-xl top-0 -z-10 h-[300px] w-full translate-y-8 left-0 " src="./public/Acceuil.jpg"
+        <nav class="relative mx-2 mt-2 w-full max-w-7xl border border-gray-200 bg-[#002B38] px-4 py-3 md:flex md:items-center md:justify-between rounded-2xl md:px-6 lg:py-0 lg:px-8 xl:mx-auto" aria-label="Global ">
+            <img class="absolute md:hidden object-cover blur rounded-xl top-0 -z-10 h-[300px] w-full translate-y-8 left-0 " src="./public/Acceuil.jpg"
             alt="Image Description">
             <div class="flex items-center justify-between">
                 <a class="flex-none text-xl font-semibold text-white" href="# " aria-label="Brand ">TeriTech</a>
@@ -58,7 +58,7 @@
     </header>
 
     <div class="mx-auto overflow-hidden md:pt-[238px] relative rounded-b-3xl max-w-7xl px-6 py-10 md:px-6 md:py-32 lg:px-8">
-        <img class="absolute max-md:hidden md:rounded-none md:translate-y-[24px] xl:px-0 top-0 -z-10 h-[100%] w-full lg:rounded-3xl md:px-2 translate-y-8 left-0 " src="./public/Acceuil.jpg"
+        <img class="absolute max-md:hidden object-cover blur md:rounded-none md:translate-y-[24px] xl:px-0 top-0 -z-10 h-[100%] w-full lg:rounded-3xl md:px-2 translate-y-8 left-0 " src="./public/Acceuil.jpg"
             alt="Image Description">
         <div class="items-center justify-center gap-4 text-center  md:grid-cols-2 md:gap-8 md:text-start xl:gap-20">
             <div data-aos="fade-right" data-aos-anchor="#example-anchor" data-aos-offset="200" data-aos-duration="2000" class="flex flex-col items-center">
@@ -134,69 +134,69 @@
                     <!-- BLOOOOOOOOOG -->
                     <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
                         <!-- Card -->
-                        <a data-aos="fade-up" data-aos-duration="3000" class="group flex h-full flex-col rounded-xl border border-gray-200 p-5 transition-all duration-300 hover:border-transparent hover:shadow-lg dark:border-gray-700 dark:hover:border-transparent dark:hover:shadow-black/[.4] dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                        <a data-aos="fade-up" data-aos-duration="3000" class="group bg-white flex h-full flex-col rounded-xl border border-gray-200 p-5 transition-all duration-300 hover:border-transparent hover:shadow-lg dark:border-gray-700 dark:hover:border-transparent dark:hover:shadow-black/[.4] dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
                             href="#">
                             <div class="aspect-w-16 aspect-h-11">
                                 <img class="w-full rounded-xl object-cover" src="https://images.unsplash.com/photo-1633114128174-2f8aa49759b0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="Image Description">
                             </div>
-                            <div class="my-6">
+                            <div class="mt-6">
                                 <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-300 dark:group-hover:text-white">
                                     Announcing a free plan for small teams
                                 </h3>
-                                <p class="mt-5 text-gray-600 dark:text-gray-400">
+                                <p class="mt-2 mb-4 text-gray-600 dark:text-gray-400">
                                     At Wake, our mission has always been focused on bringing openness.
                                 </p>
                             </div>
                             <div class="mt-auto flex items-center gap-x-3">
-                                <img class="size-8" src="./public/timetable-icon.svg" alt="Image Description">
+                                <img class="size-5" src="./public/timetable-icon.svg" alt="Image Description">
                                 <div>
-                                    <h5 class="text-sm text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
+                                    <h5 class="text-xs text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
                                 </div>
                             </div>
                         </a>
                         <!-- End Card -->
         
                         <!-- Card -->
-                        <a data-aos="fade-up" data-aos-duration="3000" class="group flex h-full flex-col rounded-xl border border-gray-200 p-5 transition-all duration-300 hover:border-transparent hover:shadow-lg dark:border-gray-700 dark:hover:border-transparent dark:hover:shadow-black/[.4] dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                        <a data-aos="fade-up" data-aos-duration="3000" class="group bg-white flex h-full flex-col rounded-xl border border-gray-200 p-5 transition-all duration-300 hover:border-transparent hover:shadow-lg dark:border-gray-700 dark:hover:border-transparent dark:hover:shadow-black/[.4] dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
                             href="#">
                             <div class="aspect-w-16 aspect-h-11">
                                 <img class="w-full rounded-xl object-cover" src="https://images.unsplash.com/photo-1562851529-c370841f6536?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3540&q=80" alt="Image Description">
                             </div>
-                            <div class="my-6">
+                            <div class="mt-6">
                                 <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-300 dark:group-hover:text-white">
                                     How Google Assistant now helps you record stories for kids
                                 </h3>
-                                <p class="mt-5 text-gray-600 dark:text-gray-400">
+                                <p class="mt-2 text-gray-600 dark:text-gray-400">
                                     Google is constantly updating its consumer AI, Google Assistant, with new features.
                                 </p>
                             </div>
                             <div class="mt-auto flex items-center gap-x-3">
-                                <img class="size-8" src="./public/timetable-icon.svg" alt="Image Description">
+                                <img class="size-5" src="./public/timetable-icon.svg" alt="Image Description">
                                 <div>
-                                    <h5 class="text-sm text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
+                                    <h5 class="text-xs text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
                                 </div>
                             </div>
                         </a>
                         <!-- End Card -->
         
                         <!-- Card -->
-                        <a data-aos="fade-up" data-aos-duration="3000" class="group flex h-full flex-col rounded-xl border border-gray-200 p-5 transition-all duration-300 hover:border-transparent hover:shadow-lg dark:border-gray-700 dark:hover:border-transparent dark:hover:shadow-black/[.4] dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                        <a data-aos="fade-up" data-aos-duration="3000" class="group bg-white flex h-full flex-col rounded-xl border border-gray-200 p-5 transition-all duration-300 hover:border-transparent hover:shadow-lg dark:border-gray-700 dark:hover:border-transparent dark:hover:shadow-black/[.4] dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
                             href="#">
                             <div class="aspect-w-16 aspect-h-11">
                                 <img class="w-full rounded-xl object-cover" src="https://images.unsplash.com/photo-1521321205814-9d673c65c167?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3548&q=80" alt="Image Description">
                             </div>
-                            <div class="my-6">
+                            <div class="mt-6">
                                 <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-300 dark:group-hover:text-white">
                                     Front accounts - let's work together
                                 </h3>
-                                <p class="mt-5 text-gray-600 dark:text-gray-400">
+                                <p class="mt-2 text-gray-600 dark:text-gray-400">
                                     Are you an accountant? Are you a company formation advisor?
                                 </p>
                             </div>
                             <div class="mt-auto flex items-center gap-x-3">
-                                <img class="size-8" src="./public/timetable-icon.svg" alt="Image Description">
+                                <img class="size-5" src="./public/timetable-icon.svg" alt="Image Description">
                                 <div>
-                                    <h5 class="text-sm text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
+                                    <h5 class="text-xs text-gray-800 dark:text-gray-200">Added since 07/04/2024</h5>
                                 </div>
                             </div>
                         </a>
