--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <!-- ========== HEADER ========== -->
     <header class="z-50 flex w-full flex-wrap text-sm md:fixed md:flex-nowrap md:justify-start">
-        <nav class="relative mx-2 mt-2 w-full max-w-7xl border border-gray-200 bg-[#002B38] px-4 py-3 md:flex md:items-center md:justify-between rounded-2xl md:px-6 lg:py-0 lg:px-8 xl:mx-auto" aria-label="Global ">
-            <img class="absolute md:hidden object-cover blur rounded-xl top-0 -z-10 h-[300px] w-full translate-y-8 left-0 " src="./public/Acceuil.jpg"
+        <nav class="relative mx-2 mt-2 w-full max-w-7xl rounded-2xl border border-green-900 bg-[#002B38]/40 px-4 py-3 backdrop-blur-md md:flex md:items-center md:justify-between md:px-6 lg:px-8 lg:py-0 xl:mx-auto" aria-label="Global ">
+            <img class="absolute left-0 top-0 -z-10 h-[300px] w-full translate-y-8 rounded-xl object-cover blur md:hidden" src="./public/Acceuil.jpg"
             alt="Image Description">
             <div class="flex items-center justify-between">
                 <a class="flex-none text-xl font-semibold text-white" href="# " aria-label="Brand ">TeriTech</a>
@@ -57,12 +57,12 @@
         </nav>
     </header>
 
-    <div class="mx-auto overflow-hidden md:pt-[238px] relative rounded-b-3xl max-w-7xl px-6 py-10 md:px-6 md:py-32 lg:px-8">
-        <img class="absolute max-md:hidden object-cover blur md:rounded-none md:translate-y-[24px] xl:px-0 top-0 -z-10 h-[100%] w-full lg:rounded-3xl md:px-2 translate-y-8 left-0 " src="./public/Acceuil.jpg"
+    <div class="relative mx-auto max-w-7xl overflow-hidden rounded-b-3xl px-6 py-10 md:px-6 md:py-32 md:pt-[238px] lg:px-8">
+        <img class="absolute left-0 top-0 -z-10 h-[100%] w-full translate-y-8 object-cover blur max-md:hidden md:translate-y-[24px] md:rounded-none md:px-2 lg:rounded-3xl xl:px-0" src="./public/Acceuil.jpg"
             alt="Image Description">
-        <div class="items-center justify-center gap-4 text-center  md:grid-cols-2 md:gap-8 md:text-start xl:gap-20">
+        <div class="items-center justify-center gap-4 text-center md:grid-cols-2 md:gap-8 md:text-start xl:gap-20">
             <div data-aos="fade-right" data-aos-anchor="#example-anchor" data-aos-offset="200" data-aos-duration="2000" class="flex flex-col items-center">
-                <h1 class="block text-3xl max-sm:max-w-[100%] sm:max-w-[75%] md:max-w-[92%] font-bold text-[#e6e6e6] lg:max-w-[75%] xl:max-w-[71%] text-center sm:text-4xl md:text-6xl lg:leading-tight">Trasformez votre vision en succèes numérique <span class="text-[#d6d6d6]">aujourd'hui</span></h1>
+                <h1 class="block text-center text-3xl font-bold text-white max-sm:max-w-[100%] sm:max-w-[75%] sm:text-4xl md:max-w-[92%] md:text-6xl lg:max-w-[75%] lg:leading-tight xl:max-w-[71%]">Trasformez votre vision en succèes numérique <span class="text-white">aujourd'hui</span></h1>
                 <div class="my-7 sm:inline-flex md:grid md:gap-3">
                     <a class="inline-flex w-40 items-center justify-center gap-x-2 rounded-lg border border-transparent bg-[#007030] px-4 py-3 text-sm font-semibold text-white hover:bg-[#00AF4F] disabled:pointer-events-none disabled:opacity-50" href="#">
                         Get started
@@ -105,7 +105,7 @@
                 <div class="mx-auto grid max-w-3xl grid-cols-12 gap-6 lg:gap-8">
                     <!-- Icon Block -->
                     <div class="col-span-6 text-center sm:col-span-4">
-                        <img class="mx-auto h-auto size-9 w-7 text-gray-800 md:w-9" src="./public/market-research-svgrepo-com.svg" width="24" height="24" alt="">
+                        <img class="mx-auto size-9 h-auto w-7 text-gray-800 md:w-9" src="./public/market-research-svgrepo-com.svg" width="24" height="24" alt="">
                         <div class="mt-2 sm:mt-6">
                             <h3 data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500" class="text-lg font-semibold text-black">
                                 Analyse De Marché
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="col-span-6 text-center sm:col-span-4">
-                        <img class="mx-auto h-auto size-9 w-7 text-gray-800 md:w-9" src="./public/puzzle-svgrepo-com.svg" width="24" height="24" alt="">
+                        <img class="mx-auto size-9 h-auto w-7 text-gray-800 md:w-9" src="./public/puzzle-svgrepo-com.svg" width="24" height="24" alt="">
                         <div class="mt-2 sm:mt-6">
                             <h3 data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500" class="text-lg font-semibold text-black">
                                 Veille Stratégique
@@ -130,11 +130,11 @@
                     </div>
                 </div>
                 <div data-aos="fade-up" data-aos-duration="3000" class="mx-auto max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14">
-                    <h1 class="text-3xl font-bold mb-8 text-[#00657C] lg:text-4xl text-center">TeriTech News / Events</h1>
+                    <h1 class="mb-8 text-center text-3xl font-bold text-[#00657C] lg:text-4xl">TeriTech News / Events</h1>
                     <!-- BLOOOOOOOOOG -->
                     <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
                         <!-- Card -->
-                        <a data-aos="fade-up" data-aos-duration="3000" class="group bg-white flex h-full flex-col rounded-xl border border-gray-200 p-5 transition-all duration-300 hover:border-transparent hover:shadow-lg dark:border-gray-700 dark:hover:border-transparent dark:hover:shadow-black/[.4] dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                        <a data-aos="fade-up" data-aos-duration="3000" class="group flex h-full flex-col rounded-xl border border-gray-200 bg-white p-5 transition-all duration-300 hover:border-transparent hover:shadow-lg dark:border-gray-700 dark:hover:border-transparent dark:hover:shadow-black/[.4] dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
                             href="#">
                             <div class="aspect-w-16 aspect-h-11">
                                 <img class="w-full rounded-xl object-cover" src="https://images.unsplash.com/photo-1633114128174-2f8aa49759b0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="Image Description">
@@ -143,7 +143,7 @@
                                 <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-300 dark:group-hover:text-white">
                                     Announcing a free plan for small teams
                                 </h3>
-                                <p class="mt-2 mb-4 text-gray-600 dark:text-gray-400">
+                                <p class="mb-4 mt-2 text-gray-600 dark:text-gray-400">
                                     At Wake, our mission has always been focused on bringing openness.
                                 </p>
                             </div>
@@ -157,7 +157,7 @@
                         <!-- End Card -->
         
                         <!-- Card -->
-                        <a data-aos="fade-up" data-aos-duration="3000" class="group bg-white flex h-full flex-col rounded-xl border border-gray-200 p-5 transition-all duration-300 hover:border-transparent hover:shadow-lg dark:border-gray-700 dark:hover:border-transparent dark:hover:shadow-black/[.4] dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                        <a data-aos="fade-up" data-aos-duration="3000" class="group flex h-full flex-col rounded-xl border border-gray-200 bg-white p-5 transition-all duration-300 hover:border-transparent hover:shadow-lg dark:border-gray-700 dark:hover:border-transparent dark:hover:shadow-black/[.4] dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
                             href="#">
                             <div class="aspect-w-16 aspect-h-11">
                                 <img class="w-full rounded-xl object-cover" src="https://images.unsplash.com/photo-1562851529-c370841f6536?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3540&q=80" alt="Image Description">
@@ -180,7 +180,7 @@
                         <!-- End Card -->
         
                         <!-- Card -->
-                        <a data-aos="fade-up" data-aos-duration="3000" class="group bg-white flex h-full flex-col rounded-xl border border-gray-200 p-5 transition-all duration-300 hover:border-transparent hover:shadow-lg dark:border-gray-700 dark:hover:border-transparent dark:hover:shadow-black/[.4] dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                        <a data-aos="fade-up" data-aos-duration="3000" class="group flex h-full flex-col rounded-xl border border-gray-200 bg-white p-5 transition-all duration-300 hover:border-transparent hover:shadow-lg dark:border-gray-700 dark:hover:border-transparent dark:hover:shadow-black/[.4] dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
                             href="#">
                             <div class="aspect-w-16 aspect-h-11">
                                 <img class="w-full rounded-xl object-cover" src="https://images.unsplash.com/photo-1521321205814-9d673c65c167?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3548&q=80" alt="Image Description">
@@ -234,19 +234,19 @@
 
 
 
-    <div class="px-2 overflow-hidden pt-8 md:px-20">
+    <div class="overflow-hidden px-2 pt-8 md:px-20">
         <h1 data-aos="fade-up" data-aos-duration="3000" class="formt md:ml-79 items-center justify-center pb-6 text-center text-7xl font-extrabold leading-tight tracking-tight text-[#002B38] md:px-20 md:text-4xl lg:leading-relaxed">
             Conjuguer l’innovation <br><span class="text-[#00657C]">
                 la stratégie et le numérique pour l'excellence.
             </span></h1>
     </div>
 
-    <div class="mx-auto overflow-hidden max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14">
+    <div class="mx-auto max-w-[85rem] overflow-hidden px-4 py-10 sm:px-6 lg:px-8 lg:py-14">
         <div class="mx-5 grid items-center gap-2 md:grid-cols-2">
 
             <a class="group flex flex-col justify-center rounded-xl p-4 hover:bg-gray-50 md:p-7" href="#">
                 <div data-aos="fade-up" data-aos-duration="3000" class="mx-5 flex size-12 items-center justify-center rounded-xl bg-[#00657C]">
-                    <img src="./public/economy_15342354.png" alt="">
+                    <svg class="size-6 flex-shrink-0 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-device-desktop-analytics"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 4m0 1a1 1 0 0 1 1 -1h16a1 1 0 0 1 1 1v10a1 1 0 0 1 -1 1h-16a1 1 0 0 1 -1 -1z" /><path d="M7 20h10" /><path d="M9 16v4" /><path d="M15 16v4" /><path d="M9 12v-4" /><path d="M12 12v-1" /><path d="M15 12v-2" /><path d="M12 12v-1" /></svg>
                 </div>
                 <div data-aos="fade-up" data-aos-duration="3000" class="max-h-50 mt-5">
                     <h3 class="mx-5 text-lg font-semibold text-[#007030] group-hover:text-[#00AF4F]">stratégie Territoriale et Intelligence Economoque</h3>
@@ -332,14 +332,14 @@
 
 
 
-    <div data-aos="fade-up" data-aos-duration="3000" class="m-4 flex overflow-hidden flex-col items-center rounded-xl p-4 py-10 lg:m-20 lg:flex-row lg:px-12" style="background-image: url('/src/c.png');background-repeat: no-repeat; background-size :cover;">
+    <div data-aos="fade-up" data-aos-duration="3000" class="m-4 flex flex-col items-center overflow-hidden rounded-xl p-4 py-10 lg:m-20 lg:flex-row lg:px-12" style="background-image: url('/src/c.png');background-repeat: no-repeat; background-size :cover;">
         <div class="my-12 md:w-3/5">
             <h1 data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500" class="formt items-cetext-center justify-center text-center text-4xl font-extrabold leading-snug text-[#00657C] lg:items-start lg:justify-start">
                 Transformez votre vision en résultats Tangibles avec notre aprproche Satratégique <br>digitale</h1>
             <br>
         </div>
 
-        <form class=" border-gray-200 lg:ml-28 w-2/4" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
+        <form class="w-2/4 border-gray-200 lg:ml-28" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
             <P class="mb-6 text-center text-4xl font-medium text-[#002B38]">Contactez-nous</P>
             <div class="mb-5">
                 <label for="email " class="mb-2 block text-sm font-semibold text-[#002B38]">Prénom</label>
@@ -361,28 +361,28 @@
     </div>
 
 
-    <footer class="mt-0 w-full flex bg-[#002B38] py-10 overflow-hidden md:my-0 md:mt-10 md:py-0">
+    <footer class="mt-0 flex w-full overflow-hidden bg-[#002B38] py-10 md:my-0 md:mt-10 md:py-0">
         <div class="mx-auto w-[90%] sm:px-6 md:pb-6 md:pt-20">
-            <div class="md:grid md:grid-cols-2 lg:flex lg:items-center max-md:w-fit md:place-items-center md:justify-items-center max-md:mx-auto lg:justify-between">
+            <div class="max-md:mx-auto max-md:w-fit md:grid md:grid-cols-2 md:place-items-center md:justify-items-center lg:flex lg:items-center lg:justify-between">
                 <div class="">
-                    <div class=" mt-6 md:col-span-full md:ml-0 md:mt-0 max-lg:flex max-lg:justify-center lg:col-span-1">
+                    <div class="mt-6 max-lg:flex max-lg:justify-center md:col-span-full md:ml-0 md:mt-0 lg:col-span-1">
                         <a class="flex-none text-5xl font-semibold text-white max-lg:text-center" href="#" aria-label="Logo">TeriTech</span></a>
                     </div>
-                    <p class="text-sm text-white mt-6">© 2024 Teritech. All rights reserved.</p>
+                    <p class="mt-6 text-sm text-white">© 2024 Teritech. All rights reserved.</p>
                 </div>
-                <div class="mt-6 md:col-span-1 ">
+                <div class="mt-6 md:col-span-1">
                     <h4 class="text-3xl font-semibold text-white max-lg:text-center">Contact</h4>
 
-                    <div class="mt-3 grid space-y-3 lg:w-40 max-lg:flex max-lg:flex-col max-lg:items-center">
+                    <div class="mt-3 grid space-y-3 max-lg:flex max-lg:flex-col max-lg:items-center lg:w-40">
                         <p><a class="text-md inline-flex gap-x-2 text-white" href="#">Tél:06060606</a></p>
-                        <p><a class="text-md inline-flex gap-x-2 text-white text-nowrap" href="#">E-mail :email@gmail.com</a></p>
+                        <p><a class="text-md inline-flex gap-x-2 text-nowrap text-white" href="#">E-mail :email@gmail.com</a></p>
                         <p><a class="text-md inline-flex gap-x-2 text-white" href="#">Adresse:Rue xx city</a></p>
                     </div>
                 </div>
-                <div class="mt-6 md:col-span-1 ">
+                <div class="mt-6 md:col-span-1">
                     <h4 class="text-3xl font-semibold text-white max-lg:text-center">Compagnie</h4>
 
-                    <div class="mt-3 grid space-y-3 lg:w-40 max-lg:flex max-lg:flex-col max-lg:items-center">
+                    <div class="mt-3 grid space-y-3 max-lg:flex max-lg:flex-col max-lg:items-center lg:w-40">
                         <p><a class="text-md inline-flex gap-x-2 text-white" href="#">Home</a></p>
                         <p><a class="text-md inline-flex gap-x-2 text-white" href="#">About</a></p>
                         <p>
@@ -397,7 +397,7 @@
                 <div class="mt-6">
                     <h4 class="text-3xl font-semibold text-white max-lg:text-center">Abonnée vous</h4>
 
-                    <div class=" flex flex-row items-center max-lg:justify-center max-lg:pt-2 justify-start pt-12">
+                    <div class="flex flex-row items-center justify-start pt-12 max-lg:justify-center max-lg:pt-2">
                         <a class="mt-35 m-4 text-2xl text-white" href="#"><i class="fab fa-youtube"></i></a>
                         <a class="mt-35 m-4 text-2xl text-white" href="#"><i class="fab fa-facebook"></i></a>
                         <a class="mt-35 m-4 text-2xl text-white" href="#"><i class="fab fa-instagram"></i></a>
